# Leaf-Class

./: CMakeLists.txt  README.md
debian/leaf-class/DEBIAN/: control
debian/leaf-class/opt/leaf-class/: leaf-class
debian/leaf-class/usr/share/applications/: leaf-class.desktop
debian/leaf-class/usr/share/leaf-class/css/: dark.css  light.css
src/: main.c
